cnosdb: fix check style error