@@ -1,5 +1,9 @@
 package sqlancer.cnosdb.oracle.tlp;
 
+import java.util.ArrayList;
+import java.util.List;
+import java.util.stream.Collectors;
+
 import sqlancer.Randomly;
 import sqlancer.cnosdb.CnosDBGlobalState;
 import sqlancer.cnosdb.CnosDBSchema;
@@ -7,7 +11,11 @@ import sqlancer.cnosdb.CnosDBSchema.CnosDBColumn;
 import sqlancer.cnosdb.CnosDBSchema.CnosDBDataType;
 import sqlancer.cnosdb.CnosDBSchema.CnosDBTable;
 import sqlancer.cnosdb.CnosDBSchema.CnosDBTables;
-import sqlancer.cnosdb.ast.*;
+import sqlancer.cnosdb.ast.CnosDBColumnValue;
+import sqlancer.cnosdb.ast.CnosDBConstant;
+import sqlancer.cnosdb.ast.CnosDBExpression;
+import sqlancer.cnosdb.ast.CnosDBJoin;
+import sqlancer.cnosdb.ast.CnosDBSelect;
 import sqlancer.cnosdb.ast.CnosDBSelect.CnosDBFromTable;
 import sqlancer.cnosdb.ast.CnosDBSelect.CnosDBSubquery;
 import sqlancer.cnosdb.gen.CnosDBExpressionGenerator;
@@ -15,11 +23,6 @@ import sqlancer.cnosdb.oracle.CnosDBNoRECOracle;
 import sqlancer.common.gen.ExpressionGenerator;
 import sqlancer.common.oracle.TernaryLogicPartitioningOracleBase;
 import sqlancer.common.oracle.TestOracle;
-
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.List;
-import java.util.stream.Collectors;
 
 public class CnosDBTLPBase extends TernaryLogicPartitioningOracleBase<CnosDBExpression, CnosDBGlobalState>
         implements TestOracle<CnosDBGlobalState> {
@@ -31,6 +34,30 @@ public class CnosDBTLPBase extends TernaryLogicPartitioningOracleBase<CnosDBExpr
 
     public CnosDBTLPBase(CnosDBGlobalState state) {
         super(state);
+    }
+
+    public static CnosDBSubquery createSubquery(CnosDBGlobalState globalState, String name, CnosDBTables tables) {
+        List<CnosDBExpression> columns = new ArrayList<>();
+        CnosDBExpressionGenerator gen = new CnosDBExpressionGenerator(globalState).setColumns(tables.getColumns());
+        for (int i = 0; i < Randomly.smallNumber() + 1; i++) {
+            columns.add(gen.generateExpression(0));
+        }
+        CnosDBSelect select = new CnosDBSelect();
+        select.setFromList(tables.getTables().stream().map(CnosDBFromTable::new).collect(Collectors.toList()));
+        select.setFetchColumns(columns);
+        if (Randomly.getBoolean()) {
+            select.setWhereClause(gen.generateExpression(0, CnosDBDataType.BOOLEAN));
+        }
+        if (Randomly.getBooleanWithRatherLowProbability()) {
+            select.setOrderByExpressions(gen.generateOrderBy());
+        }
+        if (Randomly.getBoolean()) {
+            select.setLimitClause(CnosDBConstant.createIntConstant(Randomly.getPositiveOrZeroNonCachedInteger()));
+            if (Randomly.getBoolean()) {
+                select.setOffsetClause(CnosDBConstant.createIntConstant(Randomly.getPositiveOrZeroNonCachedInteger()));
+            }
+        }
+        return new CnosDBSubquery(select, name);
     }
 
     @Override
@@ -49,8 +76,7 @@ public class CnosDBTLPBase extends TernaryLogicPartitioningOracleBase<CnosDBExpr
     }
 
     protected void generateSelectBase(List<CnosDBTable> tables, List<CnosDBJoin> joins) {
-        List<CnosDBExpression> tableList = tables.stream().map(t -> new CnosDBFromTable(t, Randomly.getBoolean()))
-                .collect(Collectors.toList());
+        List<CnosDBExpression> tableList = tables.stream().map(CnosDBFromTable::new).collect(Collectors.toList());
         gen = new CnosDBExpressionGenerator(state).setColumns(targetTables.getColumns());
         initializeTernaryPredicateVariants();
         select = new CnosDBSelect();
@@ -62,7 +88,7 @@ public class CnosDBTLPBase extends TernaryLogicPartitioningOracleBase<CnosDBExpr
 
     List<CnosDBExpression> generateFetchColumns() {
         if (Randomly.getBooleanWithRatherLowProbability()) {
-            return Arrays.asList(new CnosDBColumnValue(CnosDBColumn.createDummy("*"), null));
+            return List.of(new CnosDBColumnValue(CnosDBColumn.createDummy("*"), null));
         }
         List<CnosDBExpression> fetchColumns = new ArrayList<>();
         List<CnosDBColumn> targetColumns = targetTables.getRandomColumnsWithOnlyOneField();
@@ -84,31 +110,6 @@ public class CnosDBTLPBase extends TernaryLogicPartitioningOracleBase<CnosDBExpr
     @Override
     protected ExpressionGenerator<CnosDBExpression> getGen() {
         return gen;
-    }
-
-    public static CnosDBSubquery createSubquery(CnosDBGlobalState globalState, String name, CnosDBTables tables) {
-        List<CnosDBExpression> columns = new ArrayList<>();
-        CnosDBExpressionGenerator gen = new CnosDBExpressionGenerator(globalState).setColumns(tables.getColumns());
-        for (int i = 0; i < Randomly.smallNumber() + 1; i++) {
-            columns.add(gen.generateExpression(0));
-        }
-        CnosDBSelect select = new CnosDBSelect();
-        select.setFromList(tables.getTables().stream().map(t -> new CnosDBFromTable(t, Randomly.getBoolean()))
-                .collect(Collectors.toList()));
-        select.setFetchColumns(columns);
-        if (Randomly.getBoolean()) {
-            select.setWhereClause(gen.generateExpression(0, CnosDBDataType.BOOLEAN));
-        }
-        if (Randomly.getBooleanWithRatherLowProbability()) {
-            select.setOrderByExpressions(gen.generateOrderBy());
-        }
-        if (Randomly.getBoolean()) {
-            select.setLimitClause(CnosDBConstant.createIntConstant(Randomly.getPositiveOrZeroNonCachedInteger()));
-            if (Randomly.getBoolean()) {
-                select.setOffsetClause(CnosDBConstant.createIntConstant(Randomly.getPositiveOrZeroNonCachedInteger()));
-            }
-        }
-        return new CnosDBSubquery(select, name);
     }
 
 }
